Add basic ability to see player placed ships

--- a/src/style.css
+++ b/src/style.css
@@ -31,10 +31,15 @@
     flex: 1 0 auto;
 }
 
+.playership {
+    background-color: aqua;
+}
 .ship {
     background-color: aquamarine;
 }
-
+.playership.ship {
+    background-color: black;
+}
 .miss {
     background-color: pink;
 }
