--- a/src/style.css
+++ b/src/style.css
@@ -1,45 +1,76 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
-
-.game-container {
+header {
+    
+  text-align: center;
+  font: 700;
+  font-size: 48pt;
+  background-color: aquamarine;
+}
+body {
+  margin: 0;
+  display: grid;
+  grid-row: 3;
+  grid-template-rows: minmax(10vh, 3fr);
+  gap: 1em;
+}
+.titles {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    justify-items: center;
+    text-align: center;
+}
+.game-container {
+  margin-top: 0.1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
 }
 .left-gameboard {
-    flex: 1 1 auto;
-    display: flex;
-    width: 10rem;
-    height: 10rem;
-    flex-wrap: wrap;
-    border: 3px solid black;
+  flex: 1 1 auto;
+  display: flex;
+  width: 10rem;
+  height: 10rem;
+  flex-wrap: wrap;
+  border: 3px solid black;
 }
 
 .right-gameboard {
-    flex: 1 1 auto;
-    display: flex;
-    width: 10rem;
-    height: 10rem;
-    flex-wrap: wrap;
-    border: 3px solid black;
-    cursor: crosshair;
+  flex: 1 1 auto;
+  display: flex;
+  width: 10rem;
+  height: 10rem;
+  flex-wrap: wrap;
+  border: 3px solid black;
+  cursor: crosshair;
 }
 
 .board-cell {
-    border: 1px solid red;
-    flex: 1 0 auto;
+  border: 1px solid lightgrey;
+  flex: 1 0 auto;
 }
 
 .playership {
-    background-color: aqua;
+  background-color: aqua;
 }
 .ship {
-    background-color: aquamarine;
+  background-color: aquamarine;
 }
 .playership.ship {
-    background-color: black;
+  background-color: orange;
 }
 .miss {
-    background-color: pink;
+  background-color: pink;
+}
+
+.logs {
+    margin-top: 2em;
+    width: 25vw;
+    height: 30vh;
+    border: 1px solid lightgrey;
+    border-radius: 10%;
+    align-self: center;
+    justify-self: center;
 }
