Finish base css

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ body {
   grid-row: 3;
   grid-template-rows: minmax(10vh, 3fr);
   gap: 1em;
+  background: lavenderblush;
 }
 .titles {
     display: grid;
@@ -50,10 +51,11 @@ body {
 .board-cell {
   border: 1px solid lightgrey;
   flex: 1 0 auto;
+  background-color: whitesmoke;
 }
 
 .playership {
-  background-color: aqua;
+  background-color: lavender;
 }
 .ship {
   background-color: aquamarine;
@@ -70,7 +72,11 @@ body {
     width: 25vw;
     height: 30vh;
     border: 1px solid lightgrey;
-    border-radius: 10%;
+    border-radius: 5%;
     align-self: center;
     justify-self: center;
+    padding: 0.4em;
+    font-size: 10pt;
+    overflow-y: auto;
+    background-color: white;
 }
